--- a/src/styles/keyboard.css
+++ b/src/styles/keyboard.css
@@ -168,7 +168,8 @@
   position: absolute;
   width: 38px;
   height: 168px;
-  box-shadow: -12px -12px 10px -2px #c0c0c0 inset;
+  box-shadow: -12px -12px 10px -2px #6f66cf inset;
+  background-color: #8177e7;
 }
 
 .black-key {
@@ -189,5 +190,11 @@
   position: absolute;
   width: 20px;
   height: 103px;
-  box-shadow: -6px -2px 10px -6px #c0c0c0 inset;
+
+  background-color: #25205a;
+  background-image: linear-gradient(
+    #2c267c 5% 80%,
+    #4b42ab 85%
+  );
+  box-shadow: -6px -2px 10px -6px #2b256e inset;
 }
